# identika-wb-ai

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy-vps.yml
app/identika/: app.py  config.py  main.py  middleware.py  models.py  storage.py  ui_labels.py
app/identika/api/: routes.py
app/identika/providers/: base.py  image_gen.py  mock.py  openrouter.py  prompts.py
app/identika/services/: category_templates.py  jobs.py  product_images.py  rendering.py  uploads.py  wb_cdn.py  wb_tool.py
app/identika/static/: app.css
app/identika/templates/: base.html  create.html  index.html  job.html  settings.html  templates.html
app/identika_wb_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: deploy_vps.sh  rerender_jobs.py
tests/: conftest.py  test_api.py  test_deploy_script.py  test_generation.py  test_openrouter.py  test_openrouter_live.py  test_rebrand_settings.py  test_source_photos.py  test_subpath_static.py  test_ui_flows.py  test_ui_visual_contracts.py  test_uploads.py  test_wb_tool_integration.py  test_wb_upload.py
